# olmocrmodule

./: .dockerignore  README.md  docker-compose.yml  main.py  model_downloads.py  pyproject.toml
docker/donut/: Dockerfile  requirements.txt
docker/olmocr/: Dockerfile  requirements.txt
docker/trocr/: Dockerfile  requirements.txt
output/: result.txt
src/ocr/: __init__.py  cli.py  pipeline.py
src/ocr/engines/: __init__.py  base.py  donut.py  olmocr_vlm.py  trocr.py
